smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-after-namespace.smithy
// Syntax error at line 6, column 13: Expected IDENTIFIER but found NEWLINE('\n') | Model
$version: "2.0"

namespace smithy.example

use invalid#
